--- a/src/visual-components/header/style.less
+++ b/src/visual-components/header/style.less
@@ -1,6 +1,6 @@
 @import '../shared/constants.less';
 
-header {
+.header {
   display: flex;
   justify-content: space-between;
   align-items: center;
